[package]
name = "port-checker"
version = "0.1.0"
edition = "2021"
description = "A TUI utility to list listening TCP ports with process details"
license = "MIT"
repository = "https://github.com/user/port-checker"
keywords = ["tui", "ports", "network", "utility"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
netstat2 = "0.11"
sysinfo = "0.33"
color-eyre = "0.6"
nix = { version = "0.29", features = ["signal"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
